--- a/templates/todolist/base.html
+++ b/templates/todolist/base.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 </head>
-<body>
-    <div class="menu"><a href="{% url 'base' %}">Main</a> | <a href="/todolist/users">User registration</a> | <a href="/todolist/showallusers">All users</a></div>
+<h1 class="base_h1">Todo list websait</h1>
+<body class="mainbody">
+    <nav class="menu"><a href="{% url 'base' %}">Main</a> | <a href="/todolist/users">User registration</a> | <a href="/todolist/showallusers">All users</a>
+    | <a href="/todolist/captcha">Test Captcha</a></nav>
 
-    <div>{% block users%}{% endblock users %}</div>
+    <div>{% block navbar %}{% endblock navbar %}</div>
+    <div>{% block users %}{% endblock users %}</div>
     <div>{% block regusers %}{% endblock regusers %}</div>
     <div>{% block oneusers %}{% endblock oneusers %}</div>
 
 
+
+
 </body>
+     {% include 'todolist/footer.html'%}
 </html>
