add search form, include tags

--- a/templates/todolist/allusers.html
+++ b/templates/todolist/allusers.html
@@ -11,5 +11,9 @@
     <li>Sorry empty users list!</li>
 {% endfor %}
 <button><a href="/todolist/base">Back</a></button>
+
+{% include 'todolist/ok.html' %}
 {% endblock users %}
+
+
 
