--- a/templates/todolist/oneusers.html
+++ b/templates/todolist/oneusers.html
@@ -8,5 +8,6 @@
  <p>Usename: {{ oneuser|upper }}</p>
 
 <button><a href="/todolist/showallusers">Back</a></button>
+{% include 'todolist/ok.html' %}
 {% endblock oneusers %}
 
