--- a/templates/todolist/base.html
+++ b/templates/todolist/base.html
@@ -10,12 +10,14 @@
 <h1 class="base_h1">Todo list websait</h1>
 <body class="mainbody">
     <nav class="menu"><a href="{% url 'base' %}">Main</a> | <a href="/todolist/users">User registration</a> | <a href="/todolist/showallusers">All users</a>
-    | <a href="/todolist/captcha">Test Captcha</a> | <a href="/todolist/search">Test search</a></nav>
+    | <a href="/todolist/captcha">Test Captcha</a> | <a href="/todolist/search">Test search</a> | <a href="/todolist/login">Test LoginView</a></nav>
 
     <div>{% block navbar %}{% endblock navbar %}</div>
     <div>{% block users %}{% endblock users %}</div>
     <div>{% block regusers %}{% endblock regusers %}</div>
     <div>{% block oneusers %}{% endblock oneusers %}</div>
+    <div>{% block login %}{% endblock login %}</div>
+
 
 
 
