--- a/templates/todolist/password_reset.html
+++ b/templates/todolist/password_reset.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "todolist/base.html" %}
+
+{% block title %}PSW reset page{% endblock title %}
+
+{% block pr %}
+    <h1>Password reset page</h1>
+
+    <form action="{% url 'password_reset' %}" method="post">
+      {% csrf_token %}
+      {{ form.as_p}}
+      <button type="submit">Password reset</button>
+    </form>
+
+
+
+{% include 'todolist/ok.html' %}
+{% endblock pr %}
