--- a/templates/todolist/change_password.html
+++ b/templates/todolist/change_password.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "todolist/base.html" %}
+
+{% block title %}Change Password{% endblock title %}
+
+{% block cp %}
+
+<h1>Change password page</h1>
+
+<hr>
+
+
+    <form action="{% url 'change_password' %}" method="post">
+      {% csrf_token %}
+      {{ form.as_p}}
+      <button type="submit">Change password</button>
+    </form>
+
+{% include 'todolist/ok.html' %}
+{% endblock cp %}
+
+
+
