--- a/templates/todolist/google.html
+++ b/templates/todolist/google.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Google</title>
 </head>
 <body>
-
+         <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
+        Login Google+
+      </a>
 </body>
 </html>
