--- a/templates/todolist/password_changechange_done.html
+++ b/templates/todolist/password_changechange_done.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "todolist/base.html" %}
+
+{% block title %}Password Change Done{% endblock title %}
+
+{% block pcd %}
+    <h1>Password Change Done page</h1>
+
+    <h2>{{user.username}}</h2>
+    <p>You password change done!</p>
+
+
+{% include 'todolist/ok.html' %}
+{% endblock pcd %}
