--- a/templates/todolist/password_reset_done.html
+++ b/templates/todolist/password_reset_done.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    <h1>Password reset done!</h1>
+
+    <a href="{% url 'base' %}">Back</a>
+
 </body>
 </html>
